--- a/.github/workflows/docker-image-workflow.yml
+++ b/.github/workflows/docker-image-workflow.yml
@@ -8,6 +8,6 @@ name: docker-image-workflow
      runs-on: ubuntu-latest
      steps:
      - name: checkout code
-       uses: 
+       uses:  actions/checkout@v3
      
      
