--- a/.github/workflows/docker-image-workflow.yml
+++ b/.github/workflows/docker-image-workflow.yml
@@ -9,5 +9,10 @@ name: docker-image-workflow
      steps:
      - name: checkout code
        uses:  actions/checkout@v3
+       name: Login to Docker Hub
+       uses: docker/login-action@v2
+       with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     
