--- a/.github/workflows/docker-image-workflow.yml
+++ b/.github/workflows/docker-image-workflow.yml
@@ -1,18 +1,18 @@
 name: docker-image-workflow
-  on: 
-    push:
-       branches:
-         - main
- jobs:
-   build:
-     runs-on: ubuntu-latest
-     steps:
-     - name: checkout code
-       uses:  actions/checkout@v3
-       name: Login to Docker Hub
-       uses: docker/login-action@v2
-       with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+on: 
+  push:
+    branches:
+      - main
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout code
+      uses:  actions/checkout@v3
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     
