--- a/.github/workflows/docker-image-workflow.yml
+++ b/.github/workflows/docker-image-workflow.yml
@@ -10,7 +10,7 @@ jobs:
     - name: checkout code
       uses:  actions/checkout@v3
     - name: Login to Docker Hub
-      uses: docker/login-action@v2
+      uses: actions/checkout@v3  
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
